# npick

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plot_homotopy_path.py  plot_matching.py  plot_response.py  plot_triplexer.py
.github/workflows/: ci.yml
docs/: app.js  index.html  npick.js  npick.wasm  sample.s1p  style.css
examples/: benchmark_suite.cpp  diagnostic.cpp  duplexer_example.cpp  first_example_benchmark.cpp  matching_example.cpp  optimization_check.cpp  plot_matching_response.py  realization_check.cpp  sparameter_matching.cpp  test_imp_matching.cpp  triplexer_example.cpp
include/: chebyshev_filter.hpp  coupling_matrix.hpp  impedance_matching.hpp  nevanlinna_pick.hpp  polynomial.hpp  realization.hpp  spectral_factor.hpp  types.hpp
include/homotopy/: corrector.hpp  dopr853_predictor.hpp  homotopy_base.hpp  path_tracker.hpp  step_controller.hpp
include/multiplexer/: manifold.hpp  multiplexer_matching.hpp  multiplexer_np.hpp  t_junction.hpp
include/optimization/: nelder_mead.hpp
src/: chebyshev_filter.cpp  corrector.cpp  coupling_matrix.cpp  dopr853_predictor.cpp  impedance_matching.cpp  manifold.cpp  multiplexer_matching.cpp  multiplexer_np.cpp  nevanlinna_pick.cpp  path_tracker.cpp  polynomial.cpp  spectral_factor.cpp  t_junction.cpp
test/: test_chebyshev.cpp  test_impedance_matching.cpp  test_nevanlinna.cpp  test_polynomial.cpp  test_spectral_factor.cpp
web/: CMakeLists.txt  README.md  app.js  build.sh  build_wasm.bat  index.html  npick_bindings.cpp  sample_antenna.s1p  style.css  touchstone.js
